<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.compuways.keywordsmanager.MainActivity">
    <item
        android:id="@+id/action_local"
        android:icon="@drawable/ic_local_24dp"
        android:title="@string/setting_local"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_source"
        android:icon="@drawable/ic_delete_24dp"
        android:title="@string/sourcesetting"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_help_24dp"
        android:title="@string/deletesetting"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
